--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
   "name": "react-simple-input-range",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.0.1",
+  "main": "build/index.js",
+  "types": "index.d.ts",
+  "scripts": {
+    "clear": "rimraf build/compiled/*",
+    "build": "tsc",
+    "watch": "tsc --watch"
+  },
   "repository": "https://github.com/bluebill1049/react-simple-input-range.git",
   "author": "<bluebill1049@hotmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.1.0",
+    "typescript": "^3.2.2",
+    "uglify-es": "^3.3.9"
+  },
+  "dependencies": {
+    "react": "^16.7.0",
+    "react-simple-animate": "^2.5.0",
+    "styled-components": "^4.1.3"
+  }
 }
