--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "<bluebill1049@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^16.7.18",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.3",
     "rollup": "^1.1.0",
