--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "react": "^16.7.0",
-    "react-simple-animate": "^2.5.0",
-    "styled-components": "^4.1.3"
+    "react-simple-animate": "^2.5.0"
   }
 }
