--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "uglify-es": "^3.3.9"
   },
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
     "react": "^16.7.0",
     "react-simple-animate": "^2.5.0"
   }
