--- a/package.json
+++ b/package.json
@@ -6,22 +6,37 @@
   "scripts": {
     "clear": "rimraf build/compiled/*",
     "build": "tsc",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "release": "npm version",
+    "postrelease": "yarn publish && git push --follow-tags",
+    "test": "jest --config ./jest.config.js",
+    "testw": "yarn test --config ./jestConfig.json -- --watchAll",
+    "prepublish": "yarn test && yarn run clean && yarn build"
   },
   "repository": "https://github.com/bluebill1049/react-simple-input-range.git",
   "author": "<bluebill1049@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^23.3.12",
     "@types/react": "^16.7.18",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "jest": "^23.6.0",
     "npm-run-all": "^4.1.5",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.1.0",
+    "ts-jest": "^23.10.5",
     "typescript": "^3.2.2",
     "uglify-es": "^3.3.9"
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
-    "react": "^16.7.0",
     "react-simple-animate": "^2.5.0"
+  },
+  "peerDependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
