--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "watch": "tsc --watch",
     "release": "npm version",
     "postrelease": "yarn publish && git push --follow-tags",
-    "test": "jest --config ./jest.config.js",
-    "testw": "yarn test --config ./jestConfig.json -- --watchAll",
+    "test": "jest",
+    "testw": "yarn test -- --watchAll",
     "prepublish": "yarn test && yarn run clean && yarn build"
   },
   "repository": "https://github.com/bluebill1049/react-simple-input-range.git",
   "author": "<bluebill1049@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/enzyme": "^3.1.15",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.12",
     "@types/react": "^16.7.18",
     "enzyme": "^3.8.0",
