--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.0.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-flip-numbers": "^2.1.0",
     "react-scripts": "2.1.3",
     "typescript": "3.2.2"
   },
