--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
+    "react-flip-numbers": "^2.1.0",
     "react-simple-animate": "^2.5.0"
   },
   "peerDependencies": {
