--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc --watch",
     "release": "npm version",
     "postrelease": "yarn publish && git push --follow-tags",
-    "test": "jest",
+    "test": "jest --coverage",
     "testw": "yarn test -- --watchAll",
     "prepublish": "yarn test && yarn run clean && yarn build"
   },
@@ -21,12 +21,14 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.12",
     "@types/react": "^16.7.18",
+    "@types/react-test-renderer": "^16.0.3",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "jest": "^23.6.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-test-renderer": "^16.7.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.1.0",
     "ts-jest": "^23.10.5",
