--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "sourceMap": true,
+    "module": "es2015",
     "target": "es2017",
     "moduleResolution": "node",
-    "outDir": "./lib",
+    "outDir": "./dist",
     "declaration": true,
-    "jsx": "preserve"
+    "jsx": "react"
   },
   "include": ["src"],
   "exclude": ["node_modules", "test"]
