include test coverage

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "rollup -c",
     "watch": "tsc --watch",
     "release": "npm version",
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "postrelease": "yarn publish && git push --follow-tags",
     "test": "jest --coverage",
     "testw": "yarn test -- --watchAll",
@@ -23,6 +24,7 @@
     "@types/jest": "^23.3.12",
     "@types/react": "^16.7.18",
     "@types/react-test-renderer": "^16.0.3",
+    "coveralls": "^3.0.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "jest": "^23.6.0",
