--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.7.0",
     "react-flip-numbers": "^2.1.0",
     "react-scripts": "2.1.3",
-    "react-smooth-range-input": "0.2.3",
+    "react-smooth-range-input": "0.2.9-beta.1",
     "typescript": "3.2.2"
   },
   "scripts": {
