--- a/example/package.json
+++ b/example/package.json
@@ -7,11 +7,11 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-flip-numbers": "^2.1.0",
     "react-scripts": "2.1.3",
-    "react-smooth-range-input": "0.2.9",
+    "react-smooth-range-input": "0.3.0-beta.1",
     "typescript": "3.2.2"
   },
   "scripts": {
