--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-smooth-range-input",
-  "version": "0.2.9",
+  "version": "0.3.0-beta.1",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
@@ -41,10 +41,10 @@
   },
   "dependencies": {
     "react-flip-numbers": "^2.1.3",
-    "react-simple-animate": "^2.6.0"
+    "react-simple-animate": "^3.0.1"
   },
   "peerDependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
   }
 }
