--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-smooth-range-input",
-  "version": "0.3.0",
+  "version": "0.3.1-beta.2",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
@@ -40,11 +40,12 @@
     "uglify-es": "^3.3.9"
   },
   "dependencies": {
-    "react-flip-numbers": "^2.1.3",
-    "react-simple-animate": "^3.0.1"
+    "react-flip-numbers": "3.0.2",
+    "react-simple-animate": "^3.0.2"
   },
   "peerDependencies": {
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-dom": "^16.8.0",
+    "react-simple-animate": "^3.0.2"
   }
 }
