--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-smooth-range-input",
-  "version": "0.3.1-beta.2",
+  "version": "0.3.1",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
